# gigaleaf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.circleci/: config.yml  setup_circleci.sh  write_auth.sh
gigaleaf/: __init__.py  askpass.py  gigaleaf.py  gigantum.py  overleaf.py  utils.py
gigaleaf/linkedfiles/: __init__.py  csv.py  dataframe.py  image.py  linkedfile.py  metadata.py  texfile.py
gigaleaf/resources/: creds_message.txt  gigantum_readme.txt  intro_message.txt
gigantum2overleaf/: __init__.py  g2o.py  gigantum.py  linkedfile.py  overleaf.py  utils.py
gigantum2overleaf/linkedfiles/: __init__.py  image.py  linkedfile.py
tests/: fixtures.py  test_csv.py  test_dataframe.py  test_g2o.py  test_gigaleaf.py  test_gigantum2overleaf.py  test_overleaf.py
tests/resources/: secrets.json.template  test.csv
